--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="author" content="SemiColonWeb" />
+	<meta name="author" content="Hello World" />
 
 	<!-- Stylesheets
 	============================================= -->
@@ -12,10 +12,8 @@
 	<link rel="stylesheet" href="style.css" type="text/css" />
 	<link rel="stylesheet" href="css/swiper.css" type="text/css" />
 	<link rel="stylesheet" href="css/dark.css" type="text/css" />
-	<link rel="stylesheet" href="css/font-icons.css" type="text/css" />
 	<link rel="stylesheet" href="css/animate.css" type="text/css" />
 	<link rel="stylesheet" href="css/magnific-popup.css" type="text/css" />
-	<link rel="stylesheet" href="css/colors.css" type="text/css" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" type="text/css">
 	<link rel="stylesheet" href="css/responsive.css" type="text/css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -25,7 +23,8 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Home - One Page Layout | Canvas</title>
+	<!--TODO Insert the title from gather content-->
+	<title></title>
 	<link rel="stylesheet" href="css/custom.css" type="text/css" />
 
 </head>
@@ -43,7 +42,7 @@
 			<div class="slider-parallax-inner">
 				<div class="swiper-container swiper-parent">
 					<div class="swiper-wrapper">
-						<div class="swiper-slide dark" style="background-image: url('images/masthead1.jpg');">
+						<div class="swiper-slide dark" style="background-image: url('images/taylor-slide1.jpg.jpg');">
 							<div class="container clearfix">
 								<div class="slider-caption slider-caption-center">
 									<h2 class="h2-no-margin roboto-condensed">THE RIGHT DENTIST FOR YOUR FAMILY</h2>
@@ -51,7 +50,7 @@
 									<div class="row section-1-row">
 										<div class="col-md-6 roboto-condensed section-1-column" id="col-right">
 											<div class="height-30"><h5 class="p-font-size p-no-margin">New Patient Hotline</h5></div>
-											<div><h4 class="font-green">(888) 345-1307</h4></div>
+											<div><h4 class="font-green">(888) 387-1599</h4></div>
 										</div>
 										<div class="col-md-6" id="col-left">
 											<div class="btn-wrap float-left">
@@ -60,19 +59,19 @@
 										</div>
 									</div>
 									<div class="row center">
-										<h5 class="top-15">Existing patients of our practice <span class="phone-font-size margin-left-3" id="section-one-phone">(303) <span class="margin-left-3">288-3718</span></h5>
+										<h5 class="top-15">Existing patients of our practice <span class="phone-font-size margin-left-3" id="section-one-phone">(352) <span class="margin-left-3">376-3400</span></h5>
 									</div>
 								</div>
 							</div>
 						</div>
-						<div class="swiper-slide dark" style="background-image: url('images/masthead2.jpg');">
+						<div class="swiper-slide dark" style="background-image: url('images/taylor-slide2.jpg.jpg');">
 							<div class="container clearfix">
 								<div class="slider-caption slider-caption-center">
 									<h3 class="gentium-book font-light font-35"><q>Our family has always had excellent dental care. It is nice to have all<br> of our crowns done in one visit instead of waiting a few weeks and<br> having a temporary crown.</q> -Kristin S.</h3>
 									<div class="row section-1-row">
 										<div class="col-md-6 roboto-condensed section-1-column" id="col-right">
 											<div class="height-30"><h5 class="p-font-size p-no-margin">New Patient Hotline</h5></div>
-											<div><h4 class="font-green">(888) 345-1307</h4></div>
+											<div><h4 class="font-green">(888) 387-1599</h4></div>
 										</div>
 										<div class="col-md-6" id="col-left">
 											<div class="btn-wrap float-left">
@@ -81,12 +80,12 @@
 										</div>
 									</div>
 									<div class="row center">
-										<h5 class="top-15">Existing patients of our practice <span class="phone-font-size margin-left-3" id="section-one-phone">(303) <span class="margin-left-3">288-3718</span></h5>
+										<h5 class="top-15">Existing patients of our practice <span class="phone-font-size margin-left-3" id="section-one-phone">(352) <span class="margin-left-3">376-3400</span></h5>
 									</div>
 								</div>
 							</div>
 						</div>
-						<div class="swiper-slide dark" style="background-image: url('images/masthead3.jpg');">
+						<div class="swiper-slide dark" style="background-image: url('images/taylor-slide3.jpg.jpg');">
 							<div class="container clearfix">
 								<div class="slider-caption slider-caption-center">
 									<h2 class="h2-no-margin">No Insurance?</h2>
@@ -94,7 +93,7 @@
 									<div class="row section-1-row margin-neg-15">
 										<div class="col-md-6 roboto-condensed section-1-column" id="col-right">
 											<div class="height-30"><h5 class="p-font-size p-no-margin">New Patient Hotline</h5></div>
-											<div><h4 class="font-green">(888) 345-1307</h4></div>
+											<div><h4 class="font-green">(888) 387-1599</h4></div>
 										</div>
 										<div class="col-md-6" id="col-left">
 											<div class="btn-wrap float-left">
@@ -103,7 +102,7 @@
 										</div>
 									</div>
 									<div class="row center">
-										<h5 class="top-15">Existing patients of our practice <span class="phone-font-size margin-left-3" id="section-one-phone">(303) <span class="margin-left-3">288-3718</span></h5>
+										<h5 class="top-15">Existing patients of our practice <span class="phone-font-size margin-left-3" id="section-one-phone">(352) <span class="margin-left-3">376-3400</span></h5>
 									</div>
 								</div>
 							</div>
@@ -533,7 +532,7 @@
 							<div class="col-md-4 center">
 								<div class="col-md-12 center">
 									<div class="contact-address margin-neg-5">New Patient Hotline</div>
-									<div id="contact-phone-big" class="roboto-condensed margin-neg-5">(888) 345-1307</div>
+									<div id="contact-phone-big" class="roboto-condensed margin-neg-5">(888) 387-1599</div>
 									<div class="contact-address">Existing patients call</div>
 									<div id="contact-phone-small">(303) 288-3718</div>
 									<button class="btn btn-green topmargin-15" data-toggle="modal" data-target="#myModal"><i class="fa fa-calendar" aria-hidden="true"></i> Request Appointment</button>
