--- a/index.html
+++ b/index.html
@@ -129,21 +129,21 @@
 					<!-- Logo
 					============================================= -->
 					<div id="logo">
-						<a href="index.html" class="standard-logo" data-dark-logo="images/logo-dark.png"><img src="images/lecavalier-logo.svg" alt="LeCavalier Logo"></a>
-						<a href="index.html" class="retina-logo" data-dark-logo="images/logo-dark@2x.png"><img src="images/lecavalier-logo.svg" alt="Canvas Logo"></a>
+						<a href="index.html" class="standard-logo" data-dark-logo=""></a>
+						<a href="index.html" class="retina-logo" data-dark-logo=""></a>
 					</div><!-- #logo end -->
 
 					<!-- Primary Navigation
 					============================================= -->
 					<nav id="primary-menu">
 
-						<ul class="font-light one-page-menu" data-easing="easeInOutExpo" data-speed="1500">
-							<li><a href="#" data-href="#section-work" class="font-green"><div class="font-green weight-normal font-orange">New Patient Offers!</div></a></li>
-							<li><a href="#" data-href="#section-services" data-offset="60"><div>No Insurance?</div></a></li>
-							<li><a href="#" data-href="#section-reviews"><div>Reviews</div></a></li>
+						<ul class="font-light one-page-menu " data-easing="easeInOutExpo" data-speed="1500">
+							<li><a href="#" data-href="#section-work" class="font-green"><div class="weight-normal font-orange">New Patient Offers!</div></a></li>
+							<li><a href="#" data-href="#section-services" data-offset="60"><div class="font-light-blue">No Insurance?</div></a></li>
+							<li><a href="#" data-href="#section-reviews"><div class="font-green">Reviews</div></a></li>
 							<li><a href="#" data-href="#content"><div>Meet the Team</div></a></li>
 							<li><a href="#" data-href="#section-pricing"><div>Services</div></a></li>
-							<li><a href="#" data-href="#section-smile-gallery"><div>Gallery</div></a></li>
+							<li><a href="#" data-href="#section-smile-gallery"><div>Office Tour</div></a></li>
 							<li><a href="#" data-href="#section-location"><div>Location</div></a></li>
 						</ul>
 
