--- a/index.html
+++ b/index.html
@@ -128,10 +128,7 @@
 
 					<!-- Logo
 					============================================= -->
-					<div id="logo">
-						<a href="index.html" class="standard-logo" data-dark-logo=""></a>
-						<a href="index.html" class="retina-logo" data-dark-logo=""></a>
-					</div><!-- #logo end -->
+					<!-- #logo end -->
 
 					<!-- Primary Navigation
 					============================================= -->
