finish styling for first parallax section

--- a/index.html
+++ b/index.html
@@ -161,13 +161,13 @@
 
 		<!-- Content
 		============================================= -->
-		<section id="section-testimonials" class="notoppadding nobottommargin notopmargin page-section section parallax dark" style="background-image: url('images/parallax-background.jpg');">
+		<section id="section-testimonials" class="notoppadding nobottommargin notopmargin page-section section parallax dark" style="background-image: url('images/office-photo.jpg');">
 			<div class="section-two-border-top"></div>
 			<div class="container">
 
 				<div class="col_full center" id="text-wrap">
 
-						<h2 class="row-two-text vertical-align gentium-book h2-font-less">Serving Westminister, Denver and the Surrounding Area</h2>
+						<h2 class="row-two-text vertical-align gentium-book h2-font-less">Serving Gainsville, Westhills and the Surrounding Area</h2>
 					</div>
 
 
