--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<div class="slider-parallax-inner">
 				<div class="swiper-container swiper-parent">
 					<div class="swiper-wrapper">
-						<div class="swiper-slide dark" style="background-image: url('images/taylor-slide1.jpg.jpg');">
+						<div class="swiper-slide dark" style="background-image: url('images/taylor-slide1jpg');">
 							<div class="container clearfix">
 								<div class="slider-caption slider-caption-center">
 									<h2 class="h2-no-margin roboto-condensed">THE RIGHT DENTIST FOR YOUR FAMILY</h2>
@@ -64,7 +64,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="swiper-slide dark" style="background-image: url('images/taylor-slide2.jpg.jpg');">
+						<div class="swiper-slide dark" style="background-image: url('images/taylor-slide2.jpg');">
 							<div class="container clearfix">
 								<div class="slider-caption slider-caption-center">
 									<h3 class="gentium-book font-light font-35"><q>Our family has always had excellent dental care. It is nice to have all<br> of our crowns done in one visit instead of waiting a few weeks and<br> having a temporary crown.</q> -Kristin S.</h3>
@@ -85,7 +85,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="swiper-slide dark" style="background-image: url('images/taylor-slide3.jpg.jpg');">
+						<div class="swiper-slide dark" style="background-image: url('images/taylor-slide3.jpg');">
 							<div class="container clearfix">
 								<div class="slider-caption slider-caption-center">
 									<h2 class="h2-no-margin">No Insurance?</h2>
