add background image to meet the team section

--- a/index.html
+++ b/index.html
@@ -180,16 +180,16 @@
 
 			<div class="content-wrap notoppadding">
 
-				<section id="section-about" class="page-section">
+				<section id="section-about" style="background-image:url('images/cream_pixels.png');" class="page-section">
 
 					<div class="container clearfix">
 
 						<div class="center font-normal topmargin">
-							<h2 class="text-white">MEET THE TEAM</h2>
+							<h2 class="font-blue">MEET THE TEAM</h2>
 						</div>
 						<div class="row section-three-row-one">
 							<div class="col-md-3 center-mobile">
-								<img src="images/Ross-LeCavalier_bio.jpg">
+								<img src="images/taylor-bio.jpg">
 							</div>
 							<div class="col-md-9">
 								<h3 class="section-three-title" id="h3-ross-m">Ross M. LeCavalier, DDS</h3>
