--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<div class="slider-parallax-inner">
 				<div class="swiper-container swiper-parent">
 					<div class="swiper-wrapper">
-						<div class="swiper-slide dark" style="background-image: url('images/taylor-slide1jpg');">
+						<div class="swiper-slide dark" style="background-image: url('images/taylor-slide1.jpg');">
 							<div class="container clearfix">
 								<div class="slider-caption slider-caption-center">
 									<h2 class="h2-no-margin roboto-condensed">THE RIGHT DENTIST FOR YOUR FAMILY</h2>
@@ -67,6 +67,13 @@
 						<div class="swiper-slide dark" style="background-image: url('images/taylor-slide2.jpg');">
 							<div class="container clearfix">
 								<div class="slider-caption slider-caption-center">
+									<div>
+										<i class="fa fa-star fa-star--custom" aria-hidden="true"></i>
+										<i class="fa fa-star fa-star--custom" aria-hidden="true"></i>
+										<i class="fa fa-star fa-star--custom" aria-hidden="true"></i>
+										<i class="fa fa-star fa-star--custom" aria-hidden="true"></i>
+										<i class="fa fa-star fa-star--custom" aria-hidden="true"></i>
+									</div>
 									<h3 class="gentium-book font-light font-35"><q>Our family has always had excellent dental care. It is nice to have all<br> of our crowns done in one visit instead of waiting a few weeks and<br> having a temporary crown.</q> -Kristin S.</h3>
 									<div class="row section-1-row">
 										<div class="col-md-6 roboto-condensed section-1-column" id="col-right">
@@ -108,10 +115,7 @@
 							</div>
 						</div>
 					</div>
-					<div id="slider-arrow-left"><i class="icon-angle-left"></i></div>
-					<div id="slider-arrow-right"><i class="icon-angle-right"></i></div>
 				</div>
-
 			</div>
 		</section>
 
@@ -127,10 +131,10 @@
 
 					<!-- Logo
 					============================================= -->
-					<div id="logo">
-						<a href="index.html" class="standard-logo" data-dark-logo="images/logo-dark.png"><img src="images/lecavalier-logo.svg" alt="LeCavalier Logo"></a>
-						<a href="index.html" class="retina-logo" data-dark-logo="images/logo-dark@2x.png"><img src="images/lecavalier-logo.svg" alt="Canvas Logo"></a>
-					</div><!-- #logo end -->
+					<!--<div id="logo">-->
+						<!--<a href="index.html" class="standard-logo" data-dark-logo="images/logo-dark.png"><img src="images/lecavalier-logo.svg" alt="LeCavalier Logo"></a>-->
+						<!--<a href="index.html" class="retina-logo" data-dark-logo="images/logo-dark@2x.png"><img src="images/lecavalier-logo.svg" alt="Canvas Logo"></a>-->
+					<!--</div>&lt;!&ndash; #logo end &ndash;&gt;-->
 
 					<!-- Primary Navigation
 					============================================= -->
@@ -667,38 +671,7 @@
 
 		});
 	</script>
-	<script>
-	$document.ready(
-		HelloWorldDevs.prototype.mailForm = function (form) {
-	      var $form = $(form);
-	      $form.before('<div class="form-error"></div>');
-	      $form.submit(function(e) {
-	        e.preventDefault();
-	        var formData = $form.serialize();
-	        var formAction = $form.attr('action');
-	        $.ajax({
-	          type: 'POST',
-	          url: formAction,
-	          data: formData,
-	          dataType: 'json',
-	          encode: true
-	        }).done(function (response) {
-	          $('.form-error').remove();
-	          $form.replaceWith('Congratulations! Dentistry is a big part of a \
-	            healthy life, and we\'re excited to be a part of yours. We will \
-	            contact you in the next 2 business days to schedule your \
-	            appointment and to answer any questions you may still have. \
-	            Thank you!');
-	        }).error(function (response) {
-	          var $error_list = $('<ul></ul>');
-	          $.each(response.responseJSON, function(key, value) {
-	            $error_list.append('<li>'+value+'</li>');
-	          });
-	          $('.form-error').html($error_list).fadeIn();
-	        });
-	      });
-	    };
-	</script>
+	<script type="text/javascript" src="js/custom.js"></script>
 	<script type="text/javascript" src="http://birdeye.com/embed/v4/146903942114129/3/2358743613"></script>
 
 </body>
