finish meet the team section styling with spacing

--- a/index.html
+++ b/index.html
@@ -190,14 +190,27 @@
 						<div class="row section-three-row-one">
 							<div class="col-md-3 center-mobile">
 								<img src="images/taylor-bio.jpg">
+								<p class="section-three-text italic topmargin-15 font-14">
+									Dr. Taylor is a member of the Academy of General Dentistry, the American Dental Association, the Florida Dental Association, and the Alachua County Dental Association.
+								</p>
 							</div>
 							<div class="col-md-9">
-								<h3 class="section-three-title" id="h3-ross-m">Ross M. LeCavalier, DDS</h3>
-								<p class="section-three-text">A native of the Chicago area, Dr. LeVacalier graduated from the University of Illinois College of Dentistry in 1986. Prior to studying at Dental School, he attended the University of Illinois. Dr. LeCavalier has been practicing for over 20 years and is recognized for being one of the top dental offices in Denver, Colorado.</p>
-								<p class="section-three-text">Since he began practicing dentistry, Dr. LeVacalier has kept up to date on many continuing educational classes, ensuring that his patients receive the most comprehensive and advanced dental care.</p>
-								<p class="section-three-text">Dr. LeCavalier completed post-graduate training at the prestigious Las Vegas Institute for  Advanced Dental Studies under the world-renowned Dr. William Dickerson. While at the Institute, Dr. LeCavalier underwent intensive training including completing complex cases on live patients.</p>
-								<p class="section-three-text">Dr. LeCavalier is one of the few dentists from Colorado that has completed a program that teaches these skills.</p>
-								<p class="section-three-text">Dr. LeCavalier's commitment to excellence is emphasized bu undergoing this training to provide patients with only the best restorations and care possible.</p>
+								<h3 class="section-three-title">Cathy Taylor, DMD</h3>
+								<p class="section-three-text">Dr. Cathy Taylor was born and raised in sunny Sarasota, Florida just a couple of hours south of Gainesville. She graduated from the University of Florida with a degree in Nutritional Science and was a Gator Cheerleader during her undergraduate studies, along with her twin sister, Becky! She continued her education at UF's College of Dentistry. While in dental school, Dr. Taylor was a member of the American Student Dental Association, Dental Ambassadors, Project H.E.A.L., an inderdisciplinary trip to Quito, Ecuador to provide dental care, and was president of the Christian Dental Society.</p>
+								<p class="section-three-text">Following dental school, Dr. Taylor chose to further her education by participating in an Advanced Education in General Dentistry program based in Apopka, Florida. It was during this program that Dr. Taylor decided she wanted to make Gainesville her permanent home. She is a member of the Alachua County Dental Association, the Academy of General Dentistry, and the American Dental Association.</p>
+								<p class="section-three-text">Dr. Taylor and her husband, Andrew, met while students at UF and married shortly after graduation. Andrew, a Certified Public Accountant, works with Dr. Taylor at Taylor Dentistry while also maintaining an account businesses.</p>
+								<div class="row">
+									<div class="col-md-4">
+										<p class="section-three-text extra-width">
+											The passion and joy of their lives are their two daughters, Carlee Jay, 6, and Ellie, 3. They are blessed with family living nearby and spend much of their non-working hours sharing time with grandparents, aunts, uncles, and cousins.
+										</p>
+									</div>
+									<div class="col-md-8">
+										<div class="image-wrap">
+											<img src="images/family-photo.jpg">
+										</div>
+									</div>
+								</div>
 							</div>
 						</div>
 						<br>
