complete styling for first box of summer specials

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 				<section id="section-work" class="notoppadding page-section">
 
 					<div class="center toppadding">
-						<h2 class="title-purple">LIMITED TIME SUMMER SPECIALS</h2>
+						<h2 class="title-white">LIMITED TIME SUMMER SPECIALS</h2>
 						<span class="section-four-span">Offer Ends September 20, 2016</span>
 					</div>
 
@@ -253,8 +253,8 @@
 								<div class="price-box-price"><span class="dollar">$</span>65</div>
 
 
-								<h3 class="price-box-h3 purple-1">New Patient Dental Exam &amp; X-Rays</h3>
-								<h4 class="font-light purple-1">Save $xx</h4>
+								<h3 class="price-box-h3 green-1">New Patient Dental Exam &amp; X-Rays</h3>
+								<h4 class="font-light green-1">Save $xx</h4>
 								<p class="price-box-p">Includes comprehensive exam by the doctor and necessary x-rays.</p>
 								<p>(D0150, D0210)</p>
 							</div>
