finish styling limited time summer specials section

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 						<div class="col_one_third price-box">
 							<div class="price-box-top"></div>
 							<div class="price-box-content">
-								<div class="price-box-price"><span class="dollar">$</span>65</div>
+								<div class="price-box-price"><span class="green-1"><span class="dollar">$</span>65</span></div>
 
 
 								<h3 class="price-box-h3 green-1">New Patient Dental Exam &amp; X-Rays</h3>
@@ -277,9 +277,9 @@
 							<div class="price-box-content">
 								<div class="price-box-price gentium-book"><span class="dollar color-purple-3">$</span><span class="color-purple-3 grentium-book">99</div>
 
-								<h3 class="price-box-h3 color-purple-3">New Patient Dental Exam &amp; X-Rays</h3>
-								<h4 class="no-bold color-purple-3 price-mobile">Save $xx</h4>
-								<p class="price-box-p color-purple-3 roboto-condensed ">Patients 12 and under receive a professional dental cleaning, fluoride treatment, needed x-rays, and a comprehensive exam.</p>
+								<h3 class="price-box-h3 color-blue-1">New Patient Dental Exam &amp; X-Rays</h3>
+								<h4 class="no-bold color-blue-1 price-mobile">Save $xx</h4>
+								<p class="price-box-p color-blue-1 roboto-condensed ">Patients 12 and under receive a professional dental cleaning, fluoride treatment, needed x-rays, and a comprehensive exam.</p>
 								<p class="color-purple-3">(D1120, D1208, D0274, D0150)</p>
 							</div>
 
