--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 	<link rel="stylesheet" href="css/swiper.css" type="text/css" />
 	<link rel="stylesheet" href="css/dark.css" type="text/css" />
 	<link rel="stylesheet" href="css/animate.css" type="text/css" />
+	<link rel="stylesheet" href="css/slick.css">
+	<link rel="stylesheet" href="css/slick-theme.css">
 	<link rel="stylesheet" href="css/magnific-popup.css" type="text/css" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" type="text/css">
 	<link rel="stylesheet" href="css/responsive.css" type="text/css" />
@@ -511,6 +513,31 @@
 
 				</section>
 
+				<section id="section-tour">
+					<div class="container">
+						<div class="tour-slider">
+							<div class="tour-slide">
+								<img src="images/tour/1.jpg" alt="">
+							</div>
+							<div class="tour-slide">
+								<img src="images/tour/2.jpg" alt="">
+							</div>
+							<div class="tour-slide">
+								<img src="images/tour/3.jpg" alt="">
+							</div>
+							<div class="tour-slide">
+								<img src="images/tour/4.jpg" alt="">
+							</div>
+							<div class="tour-slide">
+								<img src="images/tour/5.jpg" alt="">
+							</div>
+							<div class="tour-slide">
+								<img src="images/tour/6.jpg" alt="">
+							</div>
+						</div>
+					</div>
+				</section>
+
 
 				<!--Inserting sample contact field-->
 				<section id="section-location" class="page-section">
@@ -582,7 +609,6 @@
 							</div>
 							<div class="col-md-4 center noleftpadding ">
 									<section id="google-map" class="gmap" style="height: 216px;width:296px;"></section>
-
 							</div>
 						</div>
 					</div>
@@ -631,7 +657,8 @@
 
 	<!-- External JavaScripts
 	============================================= -->
-	<script type="text/javascript" src="js/jquery.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+	<script>window.jQuery || document.write('<script src="js/jquery-1.11.2.min.js"><\/script>')</script>
 	<script type="text/javascript" src="js/plugins.js"></script>
 
 	<!-- Footer Scripts
@@ -640,6 +667,9 @@
 
 	<script type="text/javascript" src="https://maps.google.com/maps/api/js"></script>
 	<script type="text/javascript" src="js/jquery.gmap.js"></script>
+
+	<script src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
+	<script>window.slick || document.write('<script src="js/slick.js"><\/script>')</script>
 
 	<script type="text/javascript">
 
