add heading for tour carousel section and remove smile gallery

--- a/index.html
+++ b/index.html
@@ -522,6 +522,10 @@
 				</section>
 
 				<section id="section-tour">
+					<div class="center bottommargin">
+						<h2 class="topmargin-30">OFFICE TOUR</h2>
+						<span class="">Our state-of-the-art office and pleasant, relaxing atmosphere awaits you.</span>
+					</div>
 					<div class="container">
 						<div class="tour-slider">
 							<div class="tour-slide">
