change styling for orange patient hotline

--- a/index.html
+++ b/index.html
@@ -289,6 +289,22 @@
 					</div>
 
 				</section>
+				<section id="patient-hotline">
+					<div class="row section-1-row">
+						<div class="col-md-6 roboto-condensed section-1-column" id="col-right">
+							<div class="height-30"><h5 class="p-font-size p-no-margin">New Patient Hotline</h5></div>
+							<div><h4 class="font-green">(888) 387-1599</h4></div>
+						</div>
+						<div class="col-md-6" id="col-left">
+							<div class="btn-wrap float-left">
+								<button class="btn background-orange roboto-condensed btn-orange paddinglr-40" data-toggle="modal" data-target="#myModal"><i class="fa fa-calendar" aria-hidden="true"></i><span class="margin-left-3 font-light"> Request Appointment </button>
+							</div>
+						</div>
+					</div>
+					<div class="row center">
+						<h5 class="top-15">Existing patients of our practice <span class="phone-font-size margin-left-3" id="section-one-phone">(352) <span class="margin-left-3">376-3400</span></h5>
+					</div>
+				</section>
 
 
 
