--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
 			<div class="container clearfix" id="nav-bar-mobile">
 
-				<div id="primary-menu-trigger"><i class="icon-reorder"></i></div>
+				<div id="primary-menu-trigger"><i class="fa fa-bars" aria-hidden="true"></i></div>
 
 
 
