add hover effect for the team images

--- a/index.html
+++ b/index.html
@@ -225,36 +225,46 @@
 					<div class="team-slider">
 						<div class="team-member">
 							<a href="#" data-toggle="modal" data-target="#connie">
-								<img src="images/team/connie.jpg" alt="connie">
-								<h5>Connie Aledter</h5>
+								<div class="team-image">
+									<img src="images/team/connie.jpg" alt="connie">
+								</div>
+								<h5 class="team-name">Connie Aledter</h5>
 								<h6>Patient Coordinator</h6>
 							</a>
 						</div>
 						<div class="team-member">
 							<a href="#" data-toggle="modal" data-target="#trevor">
-								<img src="images/team/trevor.jpg" alt="trevor">
-								<h5>Trevor Crovitz</h5>
+								<div class="team-image">
+									<img src="images/team/trevor.jpg" alt="trevor">
+								</div>
+								<h5 class="team-name">Trevor Crovitz</h5>
 								<h6>Dental Assistant</h6>
 							</a>
 						</div>
 						<div class="team-member">
 							<a href="#" data-toggle="modal" data-target="#cara">
-								<img src="images/team/cara.jpg" alt="cara">
-								<h5>Cara Barfield</h5>
+								<div class="team-image">
+									<img src="images/team/cara.jpg" alt="cara">
+								</div>
+								<h5 class="team-name">Cara Barfield</h5>
 								<h6>Dental Hygienist</h6>
 							</a>
 						</div>
 						<div class="team-member">
 							<a href="#" data-toggle="modal" data-target="#kat">
-								<img src="images/team/kat.jpg" alt="kat">
-								<h5>Kat Crews</h5>
+								<div class="team-image">
+									<img src="images/team/kat.jpg" alt="kat">
+								</div>
+								<h5 class="team-name">Kat Crews</h5>
 								<h6>Dental Hygienist</h6>
 							</a>
 						</div>
 						<div class="team-member">
 							<a href="#" data-toggle="modal" data-target="#brittany">
-								<img src="images/team/brittney.jpg" alt="brittany">
-								<h5>Brittany</h5>
+								<div class="team-image">
+									<img src="images/team/brittney.jpg" alt="brittany">
+								</div>
+								<h5 class="team-name">Brittany</h5>
 								<h6>Dental Assistant</h6>
 							</a>
 						</div>
