finish styling for mobile and desktop for patient hotline section

--- a/index.html
+++ b/index.html
@@ -342,20 +342,27 @@
 
 				</div>
 				</section>
-				<section id="patient-hotline">
+				<section id="section-hotline">
 					<div class="row section-1-row">
 						<div class="col-md-6 roboto-condensed section-1-column" id="col-right">
-							<div class="height-30"><h5 class="p-font-size p-no-margin">New Patient Hotline</h5></div>
-							<div><h4 class="font-green">(888) 387-1599</h4></div>
+							<div class="height-30"><h5 class="font-14 font-light-black">New Patient Hotline</h5></div>
+							<div><h4 class="font-light-black">(888) 387-1599</h4></div>
 						</div>
 						<div class="col-md-6" id="col-left">
 							<div class="btn-wrap float-left">
-								<button class="btn background-orange roboto-condensed btn-orange paddinglr-40" data-toggle="modal" data-target="#myModal"><i class="fa fa-calendar" aria-hidden="true"></i><span class="margin-left-3 font-light"> Request Appointment </button>
+								<button class="btn background-orange roboto-condensed btn-orange" data-toggle="modal" data-target="#myModal"><i class="fa fa-calendar" aria-hidden="true"></i><span class="margin-left-3 font-light"> Request Appointment </button>
 							</div>
 						</div>
 					</div>
 					<div class="row center">
-						<h5 class="top-15">Existing patients of our practice <span class="phone-font-size margin-left-3" id="section-one-phone">(352) <span class="margin-left-3">376-3400</span></h5>
+						<div class="col-md-12">
+							<h5 class="font-15">Save time during your first appointment by filling out our online forms.</h5>
+						</div>
+					</div>
+					<div class="row center margin-neg-15">
+						<div class="col-md-12">
+							<button class="button roboto-condensed font-light btn-green-font"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>View Online Forms</button>
+						</div>
 					</div>
 				</section>
 
