finish styling/spacing for no insurance section

--- a/index.html
+++ b/index.html
@@ -398,28 +398,30 @@
 
 				<div class="container clearfix">
 					<div class="center" id="insurance-text">
-						<h2 class="title-white no-text-shadow topmargin-30 section-six-title">NO INSURANCE?</h2>
-						<span class="section-six-span no-bold">Join our Dimensions Dental Membership Club</span>
+						<h2 class=" no-text-shadow topmargin-30 font-blue nobottommargin">NO INSURANCE?</h2>
+						<span class="section-six-span no-bold font-light-black">Join our Dimensions Dental Membership Club</span>
 					</div>
 					<div class="section-six-container">
 						<div class="box-left">
 							<div class="box-left-top">
-								<h4 class="font-green-2">Join Today and Start Saving Money!</h4>
+								<h4 class="font-blue">Join Today and Start Saving Money!</h4>
 							</div>
 							<div class="box-left-bottom">
-								<p class="box-text"><i class="fa fa-check-square-o font-green-2" aria-hidden="true"></i>Easy Monthly Payments with Plans for All Family Members</p>
-								<p><i class="fa fa-check-square-o font-green-2" aria-hidden="true"></i>No Exclusions for Cosmetics or Elective Care, No Yearly Maximum Benefits, and No Deductibles!</p>
-								<p><i class="fa fa-check-square-o font-green-2" aria-hidden="true"></i>Up to 15% Discount on Needed Treatments</p>
+								<p class="box-text"><i class="fa fa-check-square-o font-blue" aria-hidden="true"></i>Easy Monthly Payments with Plans for All Family Members</p>
+								<p><i class="fa fa-check-square-o font-blue" aria-hidden="true"></i>No Exclusions for Cosmetics or Elective Care, No Yearly Maximum Benefits, and No Deductibles!</p>
+								<p><i class="fa fa-check-square-o font-blue" aria-hidden="true"></i>Up to 15% Discount on Needed Treatments</p>
 							</div>
 						</div>
 						<div class="box-right">
 							<div class="box-right-top">
-								PLANS START AT:</span>
+								<span class="font-blue">PLANS START AT:</span>
 							</div>
 							<div class="box-right-bottom">
-								<span class="dollar" id="dollar-28">$</span><span id="price-28">28</span>
+								<span class="dollar font-blue" id="dollar-28">$</span><span id="price-28" class="font-blue">28</span>
 							</div>
-							<button class="btn btn-black font-green-2" data-toggle="modal" data-target="#myModal"><i class="fa fa-check-square-o font-green-2 check-hover" aria-hidden="true"></i>Learn More</button>
+							<div class="button-wrap center">
+								<button class="btn background-orange" data-toggle="modal" data-target="#myModal"><i class="fa fa-check-square-o font-green-2 check-hover" aria-hidden="true"></i>Find Out More</button>
+							</div>
 						</div>
 					</div>
 
