--- a/index.html
+++ b/index.html
@@ -435,8 +435,8 @@
 				<div class="container clearfix">
 
 					<div class="center bottommargin">
-						<h2 class="title-purple topmargin-30">OUTSTANDING CARE IS WHAT SETS US APART</h2>
-						<span class="section-four-span">Comprehensive Care for the Whole Family</span>
+						<h2 class="font-blue topmargin-30 nobottommargin">OUTSTANDING CARE IS WHAT SETS US APART</h2>
+						<span class="section-four-span font-light-black gentium-book">Comprehensive Care for the Whole Family</span>
 					</div>
 
 					<div class="col_one_third">
@@ -447,19 +447,19 @@
 							<div class="section-8-box">
 								<!-- Cosmetic Dentisty -->
 								<div class="toggle" data-state="closed">
-									<div class="togglet"><i class="fa fa-check-square-o font-purple" aria-hidden="true"></i><span class="section-8-purple">Cosmetic Dentistry</span></div>
+									<div class="togglet"><i class="fa fa-check-square-o font-light-blue" aria-hidden="true"></i><span class="section-8-purple">Cosmetic Dentistry</span></div>
 									<div class="togglec"><p class="section-8-text">Cosmetic dentistry is one of the most cost-effective ways to improve your appearance. A beautiful, bright, healthy smile can increase self confidence and overall life satisfaction. Cosmetic dentistry can encompass things such as tooth-colored fillings, dental implants, or crowns. We have many options, so please call us for a free cosmetic consultation.</p></div>
 								</div>
 								<div class="toggle" data-state="closed">
-									<div class="togglet"><i class="fa fa-check-square-o font-purple" aria-hidden="true"></i><span class="section-8-purple">CFast Braces</span></div>
+									<div class="togglet"><i class="fa fa-check-square-o font-light-blue" aria-hidden="true"></i><span class="section-8-purple">CFast Braces</span></div>
 									<div class="togglec"><p class="section-8-text">Cosmetic dentistry is one of the most cost-effective ways to improve your appearance. A beautiful, bright, healthy smile can increase self confidence and overall life satisfaction. Cosmetic dentistry can encompass things such as tooth-colored fillings, dental implants, or crowns. We have many options, so please call us for a free cosmetic consultation.</p></div>
 								</div>
 								<div class="toggle" data-state="closed">
-									<div class="togglet"><i class="fa fa-check-square-o font-purple" aria-hidden="true"></i><span class="section-8-purple">Lumineers Prepless Veneers</span></div>
+									<div class="togglet"><i class="fa fa-check-square-o font-light-blue" aria-hidden="true"></i><span class="section-8-purple">Lumineers Prepless Veneers</span></div>
 									<div class="togglec"><p class="section-8-text">Cosmetic dentistry is one of the most cost-effective ways to improve your appearance. A beautiful, bright, healthy smile can increase self confidence and overall life satisfaction. Cosmetic dentistry can encompass things such as tooth-colored fillings, dental implants, or crowns. We have many options, so please call us for a free cosmetic consultation.</p></div>
 								</div>
 								<div class="toggle" data-state="closed">
-									<div class="togglet"><i class="fa fa-check-square-o font-purple" aria-hidden="true"></i><span class="section-8-purple">Inlays  and Onlays</span></div>
+									<div class="togglet"><i class="fa fa-check-square-o font-light-blue" aria-hidden="true"></i><span class="section-8-purple">Inlays  and Onlays</span></div>
 									<div class="togglec"><p class="section-8-text">Cosmetic dentistry is one of the most cost-effective ways to improve your appearance. A beautiful, bright, healthy smile can increase self confidence and overall life satisfaction. Cosmetic dentistry can encompass things such as tooth-colored fillings, dental implants, or crowns. We have many options, so please call us for a free cosmetic consultation.</p></div>
 								</div>
 
@@ -474,19 +474,19 @@
 							</div>
 							<div class="section-8-box">
 								<div class="toggle" data-state="closed">
-									<div class="togglet"><i class="fa fa-check-square-o font-purple" aria-hidden="true"></i><span class="section-8-purple">CEREC<span id="r-symbol-1">&reg;</span> One-Visit Crowns</span></div>
+									<div class="togglet"><i class="fa fa-check-square-o font-light-blue" aria-hidden="true"></i><span class="section-8-purple">CEREC<span id="r-symbol-1">&reg;</span> One-Visit Crowns</span></div>
 									<div class="togglec"><p class="section-8-text">Cosmetic dentistry is one of the most cost-effective ways to improve your appearance. A beautiful, bright, healthy smile can increase self confidence and overall life satisfaction. Cosmetic dentistry can encompass things such as tooth-colored fillings, dental implants, or crowns. We have many options, so please call us for a free cosmetic consultation.</p></div>
 								</div>
 								<div class="toggle" data-state="closed">
-									<div class="togglet"><i class="fa fa-check-square-o font-purple" aria-hidden="true"></i><span class="section-8-purple">Sedation Dentistry</span></div>
+									<div class="togglet"><i class="fa fa-check-square-o font-light-blue" aria-hidden="true"></i><span class="section-8-purple">Sedation Dentistry</span></div>
 									<div class="togglec"><p class="section-8-text">Cosmetic dentistry is one of the most cost-effective ways to improve your appearance. A beautiful, bright, healthy smile can increase self confidence and overall life satisfaction. Cosmetic dentistry can encompass things such as tooth-colored fillings, dental implants, or crowns. We have many options, so please call us for a free cosmetic consultation.</p></div>
 								</div>
 								<div class="toggle" data-state="closed">
-									<div class="togglet"><i class="fa fa-check-square-o font-purple" aria-hidden="true"></i><span class="section-8-purple">Dental Implants</span></div>
+									<div class="togglet"><i class="fa fa-check-square-o font-light-blue" aria-hidden="true"></i><span class="section-8-purple">Dental Implants</span></div>
 									<div class="togglec"><p class="section-8-text">Cosmetic dentistry is one of the most cost-effective ways to improve your appearance. A beautiful, bright, healthy smile can increase self confidence and overall life satisfaction. Cosmetic dentistry can encompass things such as tooth-colored fillings, dental implants, or crowns. We have many options, so please call us for a free cosmetic consultation.</p></div>
 								</div>
 								<div class="toggle" data-state="closed">
-									<div class="togglet"><i class="fa fa-check-square-o font-purple" aria-hidden="true"></i><span class="section-8-purple">Dentures</span></div>
+									<div class="togglet"><i class="fa fa-check-square-o font-light-blue" aria-hidden="true"></i><span class="section-8-purple">Dentures</span></div>
 									<div class="togglec"><p class="section-8-text">Cosmetic dentistry is one of the most cost-effective ways to improve your appearance. A beautiful, bright, healthy smile can increase self confidence and overall life satisfaction. Cosmetic dentistry can encompass things such as tooth-colored fillings, dental implants, or crowns. We have many options, so please call us for a free cosmetic consultation.</p></div>
 								</div>
 							</div>
@@ -500,19 +500,19 @@
 							</div>
 							<div class="section-8-box">
 								<div class="toggle" data-state="closed">
-									<div class="togglet"><i class="fa fa-check-square-o font-purple" aria-hidden="true"></i><span class="section-8-purple">Family-Friendly Care</span></div>
+									<div class="togglet"><i class="fa fa-check-square-o font-light-blue" aria-hidden="true"></i><span class="section-8-purple">Family-Friendly Care</span></div>
 									<div class="togglec"><p class="section-8-text">Cosmetic dentistry is one of the most cost-effective ways to improve your appearance. A beautiful, bright, healthy smile can increase self confidence and overall life satisfaction. Cosmetic dentistry can encompass things such as tooth-colored fillings, dental implants, or crowns. We have many options, so please call us for a free cosmetic consultation.</p></div>
 								</div>
 								<div class="toggle" data-state="closed">
-									<div class="togglet"><i class="fa fa-check-square-o font-purple" aria-hidden="true"></i><span class="section-8-purple">Smile-Whitening</span></div>
+									<div class="togglet"><i class="fa fa-check-square-o font-light-blue" aria-hidden="true"></i><span class="section-8-purple">Smile-Whitening</span></div>
 									<div class="togglec"><p class="section-8-text">Cosmetic dentistry is one of the most cost-effective ways to improve your appearance. A beautiful, bright, healthy smile can increase self confidence and overall life satisfaction. Cosmetic dentistry can encompass things such as tooth-colored fillings, dental implants, or crowns. We have many options, so please call us for a free cosmetic consultation.</p></div>
 								</div>
 								<div class="toggle" data-state="closed">
-									<div class="togglet"><i class="fa fa-check-square-o font-purple" aria-hidden="true"></i><span class="section-8-purple">Restorive Dentistry</span></div>
+									<div class="togglet"><i class="fa fa-check-square-o font-light-blue" aria-hidden="true"></i><span class="section-8-purple">Restorive Dentistry</span></div>
 									<div class="togglec"><p class="section-8-text">Cosmetic dentistry is one of the most cost-effective ways to improve your appearance. A beautiful, bright, healthy smile can increase self confidence and overall life satisfaction. Cosmetic dentistry can encompass things such as tooth-colored fillings, dental implants, or crowns. We have many options, so please call us for a free cosmetic consultation.</p></div>
 								</div>
 								<div class="toggle" data-state="closed">
-									<div class="togglet"><i class="fa fa-check-square-o font-purple" aria-hidden="true"></i><span class="section-8-purple">Air Abrasion</span></div>
+									<div class="togglet"><i class="fa fa-check-square-o font-light-blue" aria-hidden="true"></i><span class="section-8-purple">Air Abrasion</span></div>
 									<div class="togglec"><p class="section-8-text">Cosmetic dentistry is one of the most cost-effective ways to improve your appearance. A beautiful, bright, healthy smile can increase self confidence and overall life satisfaction. Cosmetic dentistry can encompass things such as tooth-colored fillings, dental implants, or crowns. We have many options, so please call us for a free cosmetic consultation.</p></div>
 								</div>
 
