finish visit us today section

--- a/index.html
+++ b/index.html
@@ -526,6 +526,22 @@
 
 			</section>
 
+			<section id="section-visit" class="notoppadding nobottommargin notopmargin page-section section parallax dark" style="background-image: url('images/office-tour-bkgd.jpg');">
+				<div class="section-two-border-top"></div>
+				<div class="container">
+
+					<div class="col_full center" id="text-wrap">
+
+						<h2 class="row-two-text vertical-align gentium-book h2-font-less">Come visit us today! We look forward to meeting you!</h2>
+					</div>
+
+
+				</div>
+
+
+
+			</section>
+
 			<section id="section-tour">
 				<div class="center bottommargin">
 					<h2 class="topmargin-30">OFFICE TOUR</h2>
