--- a/index.html
+++ b/index.html
@@ -543,9 +543,9 @@
 			</section>
 
 			<section id="section-tour">
-				<div class="center bottommargin">
-					<h2 class="topmargin-30">OFFICE TOUR</h2>
-					<span class="">Our state-of-the-art office and pleasant, relaxing atmosphere awaits you.</span>
+				<div class="center bottommargin-20">
+					<h2 class="topmargin-30 bottommargin-20 font-blue">OFFICE TOUR</h2>
+					<span class="font-light-black font-20">Our state-of-the-art office and pleasant, relaxing atmosphere awaits you.</span>
 				</div>
 				<div class="container">
 					<div class="tour-slider">
