put in facebook icon

--- a/index.html
+++ b/index.html
@@ -664,8 +664,7 @@
 			<div class="copyright-text">Copyrights &copy; 2016 All Rights Reserved by Tyson Steele Associates.</div>
 			<div class="social-icon-wrap fright vertical-align" style="">
 				<a href="#" class="social-icon si-small si-borderless si-facebook">
-					<i class="icon-facebook"></i>
-					<i class="icon-facebook"></i>
+					<i class="fa fa-facebook" aria-hidden="true"></i>
 				</a>
 
 				<a href="#" class="social-icon si-small si-borderless si-gplus">
