finish mobile responsiveness for last section

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 								<div class="row section-1-row">
 									<div class="col-md-6 roboto-condensed section-1-column" id="col-right">
 										<div class="height-30"><h5 class="p-font-size p-no-margin">New Patient Hotline</h5></div>
+
 										<div><h4 class="font-green">(888) 387-1599</h4></div>
 									</div>
 									<div class="col-md-6" id="col-left">
@@ -577,19 +578,37 @@
 				<div class="contact-box-wrap">
 					<div class="contact-box center">
 						<div class="taylor-image-wrap">
-							<img src="images/taylor-logo-web.png">
+							<img class="mobile-35-width" src="images/taylor-logo-web.png">
 						</div>
 						<div class="address center">
 							<span>500 NW 43rd Street, Suite 4<br>
 								Gainsville, FL 32607</span>
 						</div>
-						<div class="patient-hotline-text bottommargin-10">
+						<div class="patient-hotline-text">
 							<span>New Patient Hotline</span>
 						</div>
-						<button class="btn background-orange margin-center roboto-condensed font-light font-12"><i class="fa fa-calendar" aria-hidden="true"></i> Request Appointment
+						<div class="font-25">(888) 387-1599</div>
+						<div class="patient-hotline-text">
+							<span>Existing Patients Call</span>
+						</div>
+						<div class="font-17 bottommargin-10">(352) 376-3400</div>
+						<button class="mobile-gone btn background-orange margin-center roboto-condensed font-light font-12"><i class="fa fa-calendar" aria-hidden="true"></i> Request Appointment
 						</button>
-						<div>
+						<div class="mobile-gone">
 							<a href="http://yapi.me/f/view.php?id=52276&guid=%7B406FEB23-99D3-4957-A721-A6440FC72518%7D&tag=cassis&fp=default&nbu=New+Patient+Adult&goto4=https://goo.gl/NaAMHy"  target="_blank" id="btn-forms-bottom" class="button roboto-condensed font-light btn-green-font"><span class="top-up-4"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>View Online Forms</span></a>
+						</div>
+						<div class="row center" id="display-contact-box">
+							<div class="col-xs-6 toppadding-10">
+								<div class="mobile-appear text-right">
+									<button class="btn background-orange margin-center roboto-condensed font-light font-12"><i class="fa fa-calendar" aria-hidden="true"></i> Request Appointment
+								</button>
+								</div>
+							</div>
+							<div class="col-xs-6">
+								<div class="mobile-appear text-left">
+									<a href="http://yapi.me/f/view.php?id=52276&guid=%7B406FEB23-99D3-4957-A721-A6440FC72518%7D&tag=cassis&fp=default&nbu=New+Patient+Adult&goto4=https://goo.gl/NaAMHy"  target="_blank" id="btn-forms-bottom" class="button roboto-condensed font-light btn-green-font"><span class="top-up-4"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>View Online Forms</span></a>
+								</div>
+							</div>
 						</div>
 
 
