add responsiveness for mobile menu

--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
 			<section id="section-tour">
 				<div class="center bottommargin-20">
 					<h2 class="topmargin-30 bottommargin-20 font-blue">OFFICE TOUR</h2>
-					<span class="font-light-black font-20">Our state-of-the-art office and pleasant, relaxing atmosphere awaits you.</span>
+					<span class="font-light-black">Our state-of-the-art office and pleasant, relaxing atmosphere awaits you.</span>
 				</div>
 				<div class="container">
 					<div class="tour-slider">
