--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="css/swiper.css" type="text/css" />
 	<link rel="stylesheet" href="css/dark.css" type="text/css" />
 	<link rel="stylesheet" href="css/animate.css" type="text/css" />
+	<link rel="stylesheet" href="css/font-icons.css" type="text/css" />
 	<link rel="stylesheet" href="css/slick.css">
 	<link rel="stylesheet" href="css/slick-theme.css">
 	<link rel="stylesheet" href="css/magnific-popup.css" type="text/css" />
@@ -630,19 +631,11 @@
 	<footer id="footer" class="footer">
 		<div id="copyrights">
 			<div class="copyright-text">Copyrights &copy; 2016 All Rights Reserved by Tyson Steele Associates.</div>
+
 			<div class="social-icon-wrap fright vertical-align" style="">
-				<a href="#" class="social-icon si-small si-borderless si-facebook">
-					<i class="fa fa-facebook" aria-hidden="true"></i>
-				</a>
-
-				<a href="#" class="social-icon si-small si-borderless si-gplus">
-					<i class="icon-gplus"></i>
-					<i class="icon-gplus"></i>
-				</a>
-
-				<a href="#" class="social-icon si-small si-borderless si-twitter">
-					<i class="icon-twitter"></i>
-					<i class="icon-twitter"></i>
+				<a href="https://www.facebook.com/TaylorDentistry" target="_blank" class="social-icon si-small si-borderless si-facebook">
+					<i class="icon-facebook"></i>
+					<i class="icon-facebook"></i>
 				</a>
 			</div>
 		</div>
