add in modal code for contact form

--- a/index.html
+++ b/index.html
@@ -123,6 +123,43 @@
 		</div>
 	</section>
 
+	<!-- Modal -->
+									<div id="myModal" class="modal fade" role="dialog">
+									  <div class="modal-dialog">
+
+									    <!-- Modal content-->
+										<form id="mail-form" action="//web-api.tysonsteele.com/v1/webprops/KEY/notify">
+								          <h5>YES! Please contact me to schedule an appointment or answer any questions I might still have:</h5>
+								          <div class="row appointment_input_row form-group">
+								            <div class="col-xs-4">
+								              <label for="name">My name:</label>
+								            </div>
+								            <div class="col-xs-8">
+								              <input type="text" required name="name" id="name" class="form-control appointment_form"/>
+								            </div>
+								          </div>
+								          <div class="row appointment_input_row form-group">
+								            <div class="col-xs-4">
+								              <label for="name">Email:</label>
+								            </div>
+								            <div class="col-xs-8">
+								              <input type="email" required name="email" id="email" class="form-control appointment_form"/>
+								            </div>
+								          </div>
+								          <div class="row appointment_input_row form-group">
+								            <div class="col-xs-4">
+								              <label for="name">Phone #:</label>
+								            </div>
+								            <div class="col-xs-8">
+								              <input type="text" required name="phone" id="phone" class="form-control appointment_form"/>
+								            </div>
+								          </div>
+								          <button type="submit" class="roll-over btn btn-danger btn-block btn-lg">Request Appointment</button>
+								        </form>
+
+									  </div>
+									</div>
+
 	<!-- Header
   ============================================= -->
 	<header id="header" class="full-header">
