--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								<h2 class="h2-no-margin roboto-condensed">THE RIGHT DENTIST FOR YOUR FAMILY</h2>
 								<h3 class="gentium-book font-light nomargintop" data-caption-animate="fadeInUp"  data-caption-delay="200">Now Welcoming New Patients</h3>
 								<div class="row section-1-row">
-									<div class="col-md-6 roboto-condensed section-1-column" id="col-right">
+									<div class="section-1-column-mobile col-md-6 roboto-condensed section-1-column" id="col-right">
 										<div class="height-30"><h5 class="p-font-size p-no-margin">New Patient Hotline</h5></div>
 
 										<div><h4 class="font-green">(888) 387-1599</h4></div>
@@ -80,13 +80,13 @@
 								</div>
 								<h3 class="gentium-book font-light font-35"><q>Our family has always had excellent dental care. It is nice to have all<br> of our crowns done in one visit instead of waiting a few weeks and<br> having a temporary crown.</q> -Kristin S.</h3>
 								<div class="row section-1-row">
-									<div class="col-md-6 roboto-condensed section-1-column" id="col-right">
+									<div class="col-md-6 roboto-condensed section-1-column section-1-column-mobile" id="col-right">
 										<div class="height-30"><h5 class="p-font-size p-no-margin">New Patient Hotline</h5></div>
 										<div><h4 class="font-green">(888) 387-1599</h4></div>
 									</div>
 									<div class="col-md-6" id="col-left">
 										<div class="btn-wrap float-left">
-											<div class="btn-wrap float-left roll-over top-mobile">
+											<div class="btn-wrap float-left float-left-mobile roll-over top-mobile">
 												<a href="#section-reviews-2" data-href="#section-reviews-link" class="smoothScroll btn-green paddinglr-40 btn" id="move-up" ><i class="fa fa-comment" aria-hidden="true"></i><span class="font-light margin-left-3"> Read Our Reviews</a>
 											</div>
 										</div>
@@ -104,7 +104,7 @@
 								<h2 class="h2-no-margin">No Insurance?</h2>
 								<h3 class="gentium-book font-light" data-caption-animate="fadeInUp"  data-caption-delay="200">Start Saving Today!</h3>
 								<div class="row section-1-row margin-neg-15">
-									<div class="col-md-6 roboto-condensed section-1-column" id="col-right">
+									<div class="col-md-6 roboto-condensed section-1-column section-1-column-mobile-2" id="col-right">
 										<div class="height-30"><h5 class="p-font-size p-no-margin">New Patient Hotline</h5></div>
 										<div><h4 class="font-green">(888) 387-1599</h4></div>
 									</div>
@@ -186,7 +186,7 @@
 
 	</section>
 	<a id="meet-the-team-link-to" href="#"></a>
-	<section id="content" class="meet-the-team gentium-book font-light">
+	<section id="content" class="nopaddingbottom-mobile meet-the-team gentium-book font-light">
 
 		<div class="content-wrap notoppadding">
 
@@ -232,9 +232,9 @@
 					<div class="team-slider">
 						<div class="team-member">
 							<a href="#" data-toggle="modal" data-target="#connie">
-								<div class="team-image">
-									<img src="images/team/connie.jpg" alt="connie">
-								</div>
+									<div class="team-image">
+										<img src="images/team/connie.jpg" alt="connie">
+									</div>
 								<h4 class="team-name">Connie Aledter</h4>
 								<h6>Patient Coordinator</h6>
 							</a>
