--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
 									</div>
 									<div class="col-md-6" id="col-left">
 										<div class="btn-wrap float-left">
-											<button class="btn btn-green green" id="move-up" data-toggle="modal" data-target="#myModal"><i class="fa fa-check-square-o" aria-hidden="true"></i><span class="font-light">Join Our Membership Club </button>
+											<a href="https://taylor-dentistry.illumitrac.com/" target="_blank">
+												<button class="btn btn-green green" id="move-up" data-toggle="modal" data-target="#myModal"><i class="fa fa-check-square-o" aria-hidden="true"></i><span class="font-light">Join Our Membership Club </button>
+											</a>
 										</div>
 									</div>
 								</div>
@@ -188,7 +190,7 @@
 	<a id="meet-the-team-link-to" href="#"></a>
 	<section id="content" class="nopaddingbottom-mobile meet-the-team gentium-book font-light">
 
-		<div class="content-wrap notoppadding">
+		<div class="content-wrap notoppadding nopaddingbottom-mobile">
 
 			<section id="section-about" style="background-image:url('images/cream_pixels.png');" class="page-section">
 
