--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 									<div class="col-md-6" id="col-left">
 										<div class="btn-wrap float-left">
 											<a href="https://taylor-dentistry.illumitrac.com/" target="_blank">
-												<button class="btn btn-green green" id="move-up" data-toggle="modal" data-target="#myModal"><i class="fa fa-check-square-o" aria-hidden="true"></i><span class="font-light">Join Our Membership Club </button>
+												<button class="btn btn-green green" id="move-up"><i class="fa fa-check-square-o" aria-hidden="true"></i><span class="font-light">Join Our Membership Club </button>
 											</a>
 										</div>
 									</div>
@@ -531,7 +531,7 @@
 								<span class="dollar font-blue" id="dollar-28">$</span><span id="price-28" class="font-blue">28</span>
 							</div>
 							<div class="button-wrap center">
-								<a href="http://taylor-dentistry.illumitrac.com/#programs" target="_blank" class="btn background-orange" data-toggle="modal" data-target="#myModal"><i class="fa fa-check-square-o font-green-2 check-hover" aria-hidden="true"></i>Find Out More</a>
+								<a href="http://taylor-dentistry.illumitrac.com/#programs" target="_blank" class="btn background-orange"><i class="fa fa-check-square-o font-green-2 check-hover" aria-hidden="true"></i>Find Out More</a>
 							</div>
 						</div>
 					</div>
