remove negative letter spacing

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="author" content="Hello World" />
+	<
 
 	<!-- Stylesheets
 	============================================= -->
@@ -27,7 +28,7 @@
 	<!-- Document Title
 	============================================= -->
 	<!--TODO Insert the title from gather content-->
-	<title></title>
+	<title>Taylor Dentistry</title>
 	<link rel="stylesheet" href="css/custom.css" type="text/css" />
 
 </head>
