--- a/index.html
+++ b/index.html
@@ -805,53 +805,18 @@
 
 <!-- External JavaScripts
 ============================================= -->
-
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
-
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="js/jquery.js"><\/script>')</script>
 <script type="text/javascript" src="js/plugins.js"></script>
 
-<script type="text/javascript" src="js/functions.js"></script>
-
-<script type="text/javascript" src="js/custom.js"></script>
-
+<!-- Footer Scripts
+============================================= -->
 <script src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
 <script>window.slick || document.write('<script src="js/slick.js"><\/script>')</script>
 
-<script type="text/javascript" src="https://maps.google.com/maps/api/js"></script>
-<script type="text/javascript">
-
-	jQuery('#google-map').gMap({
-
-		address: '2761 W. 120th Avenue, Westminister',
-		maptype: 'ROADMAP',
-		zoom: 14,
-		markers: [
-			{
-				address: "2761 W. 120th Avenue, Westminister",
-				html: '<div style="width: 300px;"><h4 style="margin-bottom: 8px;">Hi, we\'re <span>Envato</span></h4><p class="nobottommargin">Our mission is to help people to <strong>earn</strong> and to <strong>learn</strong> online. We operate <strong>marketplaces</strong> where hundreds of thousands of people buy and sell digital goods every day, and a network of educational blogs where millions learn <strong>creative skills</strong>.</p></div>',
-				icon: {
-					image: "images/icons/map-icon-red.png",
-					iconsize: [32, 39],
-					iconanchor: [32,39]
-				}
-			}
-		],
-		doubleclickzoom: false,
-		controls: {
-			panControl: true,
-			zoomControl: true,
-			mapTypeControl: true,
-			scaleControl: false,
-			streetViewControl: false,
-			overviewMapControl: false
-		}
-
-	});
-</script>
-
+<script type="text/javascript" src="js/functions.js"></script>
+<script type="text/javascript" src="js/custom.js"></script>
 <script type="text/javascript" src="http://birdeye.com/embed/v4/147025711192168/3/1693194550"></script>
-
 
 </body>
 </html>
